--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.luff.javafx</groupId>
     <artifactId>Test</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     
     <properties>
@@ -16,40 +16,46 @@
     </properties>
     
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.moditect</groupId>
+                    <artifactId>moditect-maven-plugin</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.coderplus.maven.plugins</groupId>
+                    <artifactId>copy-rename-maven-plugin</artifactId>
+                    <version>1.0.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>3.1.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>1.6.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>${java.home}/bin/java</executable>
-                            <arguments>
-                                <argument>--module-path</argument>
-                                <argument>${project.build.directory}/modules</argument>
-                                <argument>--module</argument>
-                                <argument>${moduleName}/${mainClass}</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.1.1</version>
                 <executions>
                     <execution>
                         <id>copy-libs</id>
@@ -67,7 +73,6 @@
             <plugin>
                 <groupId>com.coderplus.maven.plugins</groupId>
                 <artifactId>copy-rename-maven-plugin</artifactId>
-                <version>1.0.1</version>
                 <executions>
                     <execution>
                         <id>copy-target</id>
@@ -85,7 +90,6 @@
             <plugin>
                 <groupId>org.moditect</groupId>
                 <artifactId>moditect-maven-plugin</artifactId>
-                <version>1.0.0.Beta2</version>
                 <executions>
                     <execution>
                         <id>add-module-info-to-deps</id>
@@ -135,48 +139,8 @@
                             </module>
                         </configuration>
                     </execution>
-                    <execution>
-                        <id>create-runtime-image</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>create-runtime-image</goal>
-                        </goals>
-                        <configuration>
-                            <modulePath>
-                                <path>${project.build.directory}/modules</path>
-                            </modulePath>
-                            <modules>
-                                <module>${moduleName}</module>
-                                <module>java.base</module>
-                                <module>javafx.base</module>
-                                <module>javafx.fxml</module>
-                                <module>javafx.swing</module>
-                                <module>javafx.controls</module>
-                                <module>javafx.graphics</module>
-                                <module>javafx.web</module>
-                                <module>eu.hansolo.Medusa</module>
-                            </modules>
-                            <excludedResources>
-                                <pattern>glob:/com.cerner/**</pattern>
-                            </excludedResources>
-                            <!--<baseJdk>version=11,vendor=openjdk,platform=mac</baseJdk>-->
-                            <launcher>
-                                <name>Test</name>
-                                <module>${moduleName}/${mainClass}</module>
-                            </launcher>
-                            <stripDebug>true</stripDebug>
-                            <compression>2</compression>
-                            <no-header-files>true</no-header-files>
-                            <no-man-pages>true</no-man-pages>
-                            <jdepsExtraArgs>
-                                <args>--strip-native-commands</args>
-                            </jdepsExtraArgs>
-                            <outputDirectory>${project.build.directory}/jlink-image</outputDirectory>
-                        </configuration>
-                    </execution>
                 </executions>
             </plugin>
-            
         </plugins>
     </build>
    
@@ -209,6 +173,121 @@
         </dependency>
     </dependencies>
 
- 
+    <profiles>
+        <profile>
+            <id>macos</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <properties>
+                <bundle.type>pkg</bundle.type>
+                <exec.executable>${java.home}/bin/java</exec.executable>
+            </properties>
+        </profile>
+        <profile>
+            <id>win</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <bundle.type>exe</bundle.type>
+                <exec.executable>${java.home}\bin\java</exec.executable>
+            </properties>
+        </profile>
+        <profile>
+            <id>package</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.moditect</groupId>
+                        <artifactId>moditect-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>create-runtime-image</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>create-runtime-image</goal>
+                                </goals>
+                                <configuration>
+                                    <modulePath>
+                                        <path>${project.build.directory}/modules</path>
+                                    </modulePath>
+                                    <modules>
+                                        <module>${moduleName}</module>
+                                        <module>java.base</module>
+                                        <module>javafx.base</module>
+                                        <module>javafx.fxml</module>
+                                        <module>javafx.swing</module>
+                                        <module>javafx.controls</module>
+                                        <module>javafx.graphics</module>
+                                        <module>javafx.web</module>
+                                        <module>eu.hansolo.Medusa</module>
+                                    </modules>
+                                    <excludedResources>
+                                        <pattern>glob:/com.luff/**</pattern>
+                                        <pattern></pattern>
+                                    </excludedResources>
+                                    <!--<baseJdk>version=11,vendor=openjdk,platform=mac</baseJdk>-->
+                                    <launcher>
+                                        <name>Test</name>
+                                        <module>${moduleName}/${mainClass}</module>
+                                    </launcher>
+                                    <stripDebug>true</stripDebug>
+                                    <compression>2</compression>
+                                    <excludeJmodSection>headers</excludeJmodSection>
+                                    <outputDirectory>${project.build.directory}/jlink-image</outputDirectory>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>create-package</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>${java.home}/bin/jpackager</executable>
+                                    <workingDirectory>${project.build.directory}</workingDirectory>
+                                    <longModulepath>false</longModulepath>
+                                    <environmentVariables>
+                                        <JAVA_HOME>${java.home}</JAVA_HOME>
+                                    </environmentVariables>
+                                    <arguments>
+                                        <argument>create-installer</argument>
+                                        <argument>${bundle.type}</argument>
+                                        <argument>--verbose</argument>
+                                        <argument>--echo-mode</argument>
+                                        <argument>--output</argument>
+                                        <argument>package</argument>
+                                        <argument>--version</argument>
+                                        <argument>${project.version}</argument>
+                                        <argument>--copyright</argument>
+                                        <argument>Luff Corp</argument>
+                                        <argument>--name</argument>
+                                        <argument>Test</argument>
+                                        <argument>--runtime-image</argument>
+                                        <argument>${project.build.directory}/jlink-image</argument>
+                                        <argument>--module</argument>
+                                        <argument>${moduleName}/${mainClass}</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
